syntax = "proto3";

package pb.v1;

option go_package = "github.com/byorty/enterprise-application/pkg/common/gen/pbv1";

import "google/protobuf/timestamp.proto";
import "patch/go.proto";

enum UserGroup {
    USER_GROUP_GUEST = 0 [(go.value) = {
        name: "UserGroupGuest"
    }];
    USER_GROUP_CUSTOMER = 1 [(go.value) = {
        name: "UserGroupCustomer"
    }];
}

enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0 [(go.value) = {
        name: "UserStatusUnspecified"
    }];
    USER_STATUS_UNCONFIRMED = 1 [(go.value) = {
        name: "UserStatusUnconfirmed"
    }];
    USER_STATUS_ACTIVE = 2 [(go.value) = {
        name: "UserStatusActive"
    }];
    USER_STATUS_BLOCKED = 3 [(go.value) = {
        name: "UserStatusBlocked"
    }];
}

message User {
    string uuid = 1;
    UserGroup group = 2;
    UserStatus status = 3;
    string phone_number = 4;
    string lastname = 5;
    string firstname = 6;
    google.protobuf.Timestamp created_at = 7;
}

message Session {
    string uuid = 1;
    UserGroup group = 2;
}

enum PermissionObject {
    PERMISSION_OBJECT_UNSPECIFIED = 0 [
        (go.value) = {
            name: "PermissionObjectUnspecified"
        }
    ];
    PERMISSION_OBJECT_USER = 1 [
        (go.value) = {
            name: "PermissionObjectUser"
        }
    ];
    PERMISSION_OBJECT_PRODUCT = 2 [
        (go.value) = {
            name: "PermissionObjectProduct"
        }
    ];
    PERMISSION_OBJECT_ORDER = 3 [
        (go.value) = {
            name: "PermissionObjectOrder"
        }
    ];
    PERMISSION_OBJECT_USER_PRODUCT = 4 [
        (go.value) = {
            name: "PermissionObjectUserProduct"
        }
    ];
}

enum PermissionOperation {
    PERMISSION_OPERATION_UNSPECIFIED = 0 [
        (go.value) = {
            name: "PermissionOperationUnspecified"
        }
    ];
    PERMISSION_OPERATION_READ = 1 [
        (go.value) = {
            name: "PermissionOperationRead"
        }
    ];
    PERMISSION_OPERATION_WRITE = 2 [
        (go.value) = {
            name: "PermissionOperationWrite"
        }
    ];
}